--- a/index.html
+++ b/index.html
@@ -6,11 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web-development-Portfolio</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welcome To</h1>
-    <h1><span class="sazzad">Sazzad</span> World</h1>
+   <section class="bg">
+       <div id="po" class="re"> 
+        <h1>Welcome To</h1>
+        <h1><span class="sazzad">Sazzad</span> World</h1>
+        <h3>Professional Video Editor</h3>
+        <p>I'm Sazzad hossain shuvo.I'm professional video editor. My experience in adobe after effect & adobe premiere pro over 4 year. I am passionate about my work and very detailed oriented. I love bringing beauty, creativity and functionality into every project. Just leave me a message :)</p>
+        <a target="_blank" class="link" href="https://www.linkedin.com/in/sazzad-hossain-shuvo-1ba038181/">HIRE ME</a>
+        </div>
+        <div id="img" class="re">
+            <img src="image/vector-editing.png" alt="">
+        </div>
+   </section>
+   <section class="bg2">
+       <div class="re">
+        <img style="width: 85%;" src="image/my1.png" alt="">
+       </div>
+       <div class="re" >
+        <h1>About Me</h1>
+        <h3>I'm Sazzad hossain shuvo</h3>
+        <p>I am passionate about my work and very detailed oriented. I love bringing beauty, creativity and functionality into every project. I am confident that with my knowledge I can bring clients vision into reality.
+        </p>
+        <a class="link2" href="_black">DOWNLOAD RESUME</a>
+       </div>
+    </section>
+    <section class="last">
+        <div class="re pk ck">
+            <h1>Adobe Premiere Pro</h1>
+            <h3>Experience over 4 years</h3>
+            <p>Premiere Pro is the successor to Adobe Premiere and was launched in 2003. Premiere Pro refers to versions released in 2003 and later,whereas Premiere refers to the earlier releases. Premiere was based on ReelTime, a product acquired from SuperMac Technologies Inc. and was one of the first computer-based NLEs (non-linear editing system), with its first release on Mac in 1991. Adobe briefly abandoned the Mac platform after version 6 of Premiere..</p>
+
+        </div>
+        <div class="re pk">
+            <h1>Adobe After Effect</h1>
+            <h3>Experience over 4 years</h3>
+            <p>After Effects was originally created by David Herbstman, David Simons, Daniel Wilk, David M. Cotter, and Russell Belfer[4] at the Company of Science and Art in Providence, Rhode Island, where the first two versions of the software, 1.0 (January 1993)[5] and 1.1, were released by the company. CoSA along with After Effects was then acquired by Aldus Corporation in July 1993, which was in turn acquired by Adobe in 1994, and with it PageMaker. Adobe's first new release of After Effects was version 3.0.</p>
+
+        </div>
+    </section>
+    
 </body>
 </html>
